--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 
-members = ["rust-io-file-serde", "strtok", "museum-arii", "fibonacci", "event_encoder"]
+members = ["rust-io-file-serde", "strtok", "museum-arii", "fibonacci", "event_encoder", "actor"]
