--- a/museum-arii/Cargo.toml
+++ b/museum-arii/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 tokio = {version = "1.24.0", features = ["sync"]}
+serde = {version = "1", features = ["derive"]}
+serde_json = "1"
