--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "fibonacci", 
     "event_encoder", 
     "actor", 
-    "crates_hands_on/axum"
+    "crates_hands_on/axum",
+    
 ]
 
